# content_review_agent

./: .gitignore  README.md  SKILL.md  build.py  pyproject.toml  requirements.txt
.superpowers/sdd/: task-3-report.md  task-5-report.md  task-6-report.md
config/: 审核Agent配置.json  标准包文件清单.json
docs/lessons/: 2026-07-17-local-auth-startup-lesson.md
docs/training/: basic_content_case_scripts.md
docs/v1-reference/: 上线前检查清单.md  审核仲裁器示例.py  审核状态与仲裁逻辑.md  标准加载器示例.py  标准迁移与修改逻辑.md  自动修改服务示例.py  自动修改逻辑.md
prompts/: 产品功能准确性审核Agent.md  传播有效性审核Agent.md  供应商问题沉淀Prompt.md  公共审核约束.md  内容质量审核Agent.md  合规与广告表达审核Agent.md  品牌一致性审核Agent.md  实测可信度审核Agent.md
references/: review_standards.md  text_review_standards.md
scripts/: agent_loop.py  auto_review.py  extract_frames.py  human_queue.py  start_local.sh  sync_dashboard.py  sync_intake.py
scripts/text_review/: __init__.py  engine.py  report.py  reviewer.py  run_review.py  schema.py  standards.py  table_adapter.py
server/: db.py  main.py  models.py  schemas.py  seed.py  vercel_app.py
server/services/: __init__.py  audit_executor_service.py  audit_job_service.py  auth_service.py  (+12 more)
tests/: test_api.py  test_audit_jobs.py  test_auth.py  test_database.py  test_deterministic_rules.py  test_evidence_workflow.py  test_excel_api.py  test_excel_import.py  test_excel_workflow.py  test_image_evidence_service.py  test_review_workflow.py  test_standard_package.py  test_tech_media_agents.py  test_training_cases.py  test_web_presentation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
webapp/: app.py
(+77 files in other folders)
