[project]
name = "content-review-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "requests>=2.31,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "openpyxl>=3.1,<4.0",
    "PyYAML>=6.0,<7.0",
    "jsonschema>=4.20,<5.0",
    "argon2-cffi>=23.1,<26.0",
]

[tool.uv]
package = false

[tool.vercel]
entrypoint = "server.main:app"
